--- a/h5p-bildetema/src/components/SubHeader/SubHeader.module.scss
+++ b/h5p-bildetema/src/components/SubHeader/SubHeader.module.scss
@@ -1,16 +1,24 @@
 @use "../../../../common/abstracts" as *;
 
-.subHeader {
-  align-items: center;
+.subHeaderThemes,
+.subHeaderWords {
+  align-items: flex-end;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   gap: 1rem;
   justify-content: space-between;
   min-height: 2.75rem;
   margin: $main-content-margin;
   max-width: $main-content-max-width;
   width: $main-content-width;
+
+  @include breakpoint-min($small) {
+    align-items: center;
+  }
+}
+
+.subHeaderWords {
+  flex-wrap: wrap;
 }
 
 .tools {
@@ -18,6 +26,7 @@
   display: flex;
   flex-wrap: wrap;
   font-size: $font-size-18;
+  margin: 10px 0;
   row-gap: 1rem;
 
   @media print {
